[java-11] Used java 11 apis where appropriate